# airbyte-lab

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
airbyte-api/airbyte/: access token.bru  bruno.json  create application.bru  create user.bru  delete application.bru  list application.bru  list org.bru  list users.bru
airbyte-api/airbyte/environments/: local.bru
airflow/: .env  Dockerfile  pyproject.toml
airflow/dags/: airbyte.py  order_to_bigquery.py
airflow/sql/: init.sql
dags/: airbyte.py  dag.py
sql/: init.sql
